# opencvblobslib

./: BlobContour.cpp  BlobContour.h  BlobLibraryConfiguration.h  BlobOperators.cpp  BlobOperators.h  BlobResult.cpp  BlobResult.h  CMakeLists.txt  ComponentLabeling.cpp  ComponentLabeling.h  MacroBlob.cpp  MacroBlob.h  README.md  Segment.cpp  Segment.h  blob.cpp  blob.h  cvblobslib.sln  cvblobslib.vcxproj  index.html  makefile  opencvblobslib.sln  opencvblobslib.vcxproj  opencvblobslib.vcxproj.filters  opencvblobslibConfig.cmake.in  opencvblobslibConfigVersion.cmake.in  params.json
example/: CMakeLists.txt  Thumbs.db  main.cpp
opencvblobslibExample/: main.cpp  opencvBlobsExample.vcxproj  opencvBlobsExample.vcxproj.filters
opencvblobslibExample/opencvBlobsExample/: main.cpp  opencvBlobsExample.vcxproj  opencvBlobsExample.vcxproj.filters
opencvblobslibTest/: main.cpp  opencvblobslibTest.vcxproj
